5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1757_2103.log
== TEST (2019-07-03 09:58:20) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
x=size(b)-1
c=zeros(size(b),dtype=int)
y=0
while(x<size(b)):
	c[y]=b[x]
	y+=1
	x-=1
	print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 09:58:25) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
x=size(b)-1
c=zeros(size(b),dtype=int)
y=0
while(x<size(b)):
	c[y]=b[x]
	y+=1
	x-=1
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 09:59:03) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
x=size(b)-1
c=zeros(size(b),dtype=int)
y=0
while(x>=size(b)):
	c[y]=b[x]
	y+=1
	x-=1
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 09:59:12) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
x=size(b)-1
c=zeros(size(b),dtype=int)
y=0
while(x>0):
	c[y]=b[x]
	y+=1
	x-=1
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 10:04:44) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
x=size(b)-1
c=zeros(size(b),dtype=int)
y=0
while(x>0):
	c[y]=b[x]
	y+=1
	x-=1
print(c)

-- EXECUTION TIME:
1.15299
-- TEST CASE 1:
---- input:
[1,3,5,7,9]
[2,4,6,8,10]
---- correct output:
10
8
6
7
9
---- user output:
[10  8  6  4  0]
-- TEST CASE 2:
---- input:
[55,12,40]
[100,2,17]
---- correct output:
55
12
100
---- user output:
[17  2  0]
-- TEST CASE 3:
---- input:
[2,3,5,7]
[11,13,17,19]
---- correct output:
19
17
13
11
---- user output:
[19 17 13  0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 10:04:46) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
x=size(b)-1
c=zeros(size(b),dtype=int)
y=0
while(x>0):
	c[y]=b[x]
	y+=1
	x-=1
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 10:11:52) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
x=size(b)-1
c=zeros(size(b),dtype=int)
y=0
while(x>0):
	c[y]=b[x]
	y+=1
	x-=1
b = c
d=0
while(d<size(b)):
	if(a[d] > b[d]):
		print(a[d])
	elif(b[d]>a[d]):
		print(b[d])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 10:12:19) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
x=size(b)-1
c=zeros(size(b),dtype=int)
y=0
while(x>0):
	c[y]=b[x]
	y+=1
	x-=1
b = c
d=0
while(d<size(b)):
	if(a[d] > b[d]):
		print(a[d])
	d+=1
	elif(b[d]>a[d]):
		print(b[d])
	d+=1
-- ERROR:
File "XXXX", line 18
    elif(b[d]>a[d]):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 10:12:49) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
x=size(b)-1
c=zeros(size(b),dtype=int)
y=0
while(x>0):
	c[y]=b[x]
	y+=1
	x-=1
b = c
d=0
while(d<size(b)):
	if(a[d] > b[d]):
		print(a[d])
	elif(b[d]>a[d]):
		print(b[d])
	d+=1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 10:13:44) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
x=size(b)-1
c=zeros(size(b),dtype=int)
y=0
while(x>0):
	c[y]=b[x]
	y+=1
	x-=1
b = c
d=0
while(d<size(b)):
	if(a[d] > b[d]):
		print(a[d])
	elif(b[d]>a[d]):
		print(b[d])
	d+=1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 10:14:03) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
x=size(b)-1
c=zeros(size(b),dtype=int)
y=0
while(x>0):
	c[y]=b[x]
	y+=1
	x-=1
b = c
d=0
while(d<size(b)):
	if(a[d] > b[d]):
		print(a[d])
	elif(b[d]>a[d]):
		print(b[d])
	d+=1
-- EXECUTION TIME:
0.827689
-- TEST CASE 1:
---- input:
[1,3,5,7,9]
[2,4,6,8,10]
---- correct output:
10
8
6
7
9
---- user output:
10
8
6
7
9
-- TEST CASE 2:
---- input:
[55,12,40]
[100,2,17]
---- correct output:
55
12
100
---- user output:
55
12
40
-- TEST CASE 3:
---- input:
[2,3,5,7]
[11,13,17,19]
---- correct output:
19
17
13
11
---- user output:
19
17
13
7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 10:14:11) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
x=size(b)-1
c=zeros(size(b),dtype=int)
y=0
while(x>0):
	c[y]=b[x]
	y+=1
	x-=1
b = c
d=0
while(d<size(b)):
	if(a[d] > b[d]):
		print(a[d])
	elif(b[d]>a[d]):
		print(b[d])
	d+=1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 10:14:20) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
x=size(b)-1
c=zeros(size(b),dtype=int)
y=0
while(x=>0):
	c[y]=b[x]
	y+=1
	x-=1
b = c
d=0
while(d<size(b)):
	if(a[d] > b[d]):
		print(a[d])
	elif(b[d]>a[d]):
		print(b[d])
	d+=1
-- ERROR:
File "XXXX", line 8
    while(x=>0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 10:14:25) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
x=size(b)-1
c=zeros(size(b),dtype=int)
y=0
while(x>=0):
	c[y]=b[x]
	y+=1
	x-=1
b = c
d=0
while(d<size(b)):
	if(a[d] > b[d]):
		print(a[d])
	elif(b[d]>a[d]):
		print(b[d])
	d+=1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 10:14:35) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
x=size(b)-1
c=zeros(size(b),dtype=int)
y=0
while(x>=0):
	c[y]=b[x]
	y+=1
	x-=1
b = c
d=0
while(d<size(b)):
	if(a[d] > b[d]):
		print(a[d])
	elif(b[d]>a[d]):
		print(b[d])
	d+=1
-- EXECUTION TIME:
0.882028
-- TEST CASE 1:
---- input:
[1,3,5,7,9]
[2,4,6,8,10]
---- correct output:
10
8
6
7
9
---- user output:
10
8
6
7
9
-- TEST CASE 2:
---- input:
[55,12,40]
[100,2,17]
---- correct output:
55
12
100
---- user output:
55
12
100
-- TEST CASE 3:
---- input:
[2,3,5,7]
[11,13,17,19]
---- correct output:
19
17
13
11
---- user output:
19
17
13
11
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 10:17:31) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
x=size(b)-1
c=zeros(size(b),dtype=int)
y=0
while(x>=0):
	c[y]=b[x]
	y+=1
	x-=1
b = c
d=0
while(d<size(b)):
	if(a[d] > b[d]):
		print(a[d])
	elif(b[d]>a[d]):
		print(b[d])
	d+=1
	print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 10:17:36) 
-- CODE:
from numpy import*

a=array(eval(input()))
b=array(eval(input()))
x=size(b)-1
c=zeros(size(b),dtype=int)
y=0
while(x>=0):
	c[y]=b[x]
	y+=1
	x-=1
b = c
d=0
while(d<size(b)):
	if(a[d] > b[d]):
		print(a[d])
	elif(b[d]>a[d]):
		print(b[d])
	d+=1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
